--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       DATABASE_URL: postgresql+asyncpg://postgres:admin@db:5432/parking
     volumes:
       - .:/app
-    command: ["uvicorn", "web.main:app", "--host", "0.0.0.0", "--port", "8000"]
+    command: ["sh", "-c", "python init_db.py && uvicorn web.main:app --host 0.0.0.0 --port 8000"]
 
 volumes:
   postgres_data:
