--- a/requirements.txt
+++ b/requirements.txt
@@ -3,16 +3,26 @@ alembic==1.14.0
 annotated-types==0.7.0
 anyio==4.6.2.post1
 asyncpg==0.30.0
+bcrypt==4.3.0
 click==8.1.7
+dnspython==2.7.0
+ecdsa==0.19.1
+email_validator==2.2.0
 fastapi==0.115.5
 greenlet==3.1.1
 h11==0.14.0
 idna==3.10
 Mako==1.3.6
 MarkupSafe==3.0.2
+passlib==1.7.4
 punq==0.7.0
+pyasn1==0.4.8
 pydantic==2.10.2
 pydantic_core==2.27.1
+python-jose==3.4.0
+python-multipart==0.0.20
+rsa==4.9.1
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.36
 starlette==0.41.3
