--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,54 @@
+aio-pika==9.5.5
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.6
+aiormq==6.8.1
+aiosignal==1.3.2
 aiosqlite==0.20.0
 alembic==1.14.0
 annotated-types==0.7.0
 anyio==4.6.2.post1
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
 asyncpg==0.30.0
+attrs==25.3.0
 bcrypt==4.3.0
+certifi==2025.4.26
+cffi==1.17.1
+charset-normalizer==3.4.2
 click==8.1.7
 dnspython==2.7.0
 ecdsa==0.19.1
 email_validator==2.2.0
+exceptiongroup==1.3.0
 fastapi==0.115.5
+frozenlist==1.6.0
 greenlet==3.1.1
 h11==0.14.0
 idna==3.10
+loguru==0.7.3
 Mako==1.3.6
 MarkupSafe==3.0.2
+minio==7.2.15
+multidict==6.4.4
+pamqp==3.3.0
 passlib==1.7.4
+pillow==11.2.1
+propcache==0.3.1
 punq==0.7.0
 pyasn1==0.4.8
+pycparser==2.22
+pycryptodome==3.22.0
 pydantic==2.10.2
 pydantic_core==2.27.1
 python-jose==3.4.0
 python-multipart==0.0.20
+requests==2.32.3
 rsa==4.9.1
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.36
 starlette==0.41.3
 typing_extensions==4.12.2
+urllib3==2.4.0
 uvicorn==0.32.1
+yarl==1.20.0
